gap fixed

--- a/CSS/home.css
+++ b/CSS/home.css
@@ -562,9 +562,10 @@ nav{
     margin-top: 30px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     width: 100%;
-    gap: 20px;
+    /* gap: 20px; */
+
 }
 .about-numbers .thecont .space .headerandboxes  .boxescont .box{
     border-radius: 20px;
@@ -573,6 +574,7 @@ nav{
     background: #001730;
     color: white;
     transition: 0.5s;
+    margin-top: 20px;
 }
 .about-numbers .thecont .space .headerandboxes  .boxescont .box:hover{
     box-shadow: inset 0 170px 0 0 #cecccc59;
@@ -600,8 +602,8 @@ nav{
     .about-numbers{
         background-position: 0% -50%;
     }
-    .about-numbers .thecont .space{
-        row-gap: 50px;
+    .about-numbers .thecont .space .number-img{
+        margin-top: 50px;
     }
 }
 @media (max-width:992px){
@@ -631,7 +633,6 @@ nav{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    row-gap: 50px;
 }
 .events .evet-cont .event-text{
     background: #1C2B4E;
@@ -641,6 +642,7 @@ nav{
     padding: 20px 50px;
     height: fit-content;
     font-size: 18px;
+    margin-top: 50px;
 }
 
 @media (max-width:405px){
@@ -650,7 +652,7 @@ nav{
 }
 @media (max-width:950px){
     .events{
-        margin-top: -50px;
+        margin-top: -100px;
     }
     .events .evet-cont{
         justify-content: center;
@@ -680,8 +682,6 @@ nav{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    row-gap: 120px;
-    /* margin-top: 120px; */
     background-image: url("../PHOTOS/coursesbackground.jpg");
     background-size: cover;
     background-position: 50% 50%;
@@ -697,6 +697,10 @@ nav{
     transition: 0.7s;
     text-decoration: none;
     color: black;
+    
+}
+.courses a{
+    /* margin-top: 150px; */
 }
 .courses img{
     width: 100%;
@@ -706,6 +710,7 @@ nav{
 }
 .courses a .course-name{
     width: 100%;
+    height: 76px;
     padding: 10px 10px;
     background: white;
     position: absolute;
@@ -721,41 +726,24 @@ nav{
     opacity: 1 !important;
 }
 
-
-
-
-/*AD*/
-
-.Advertisement{
-    text-align: center;
-    margin-top:120px;
-    margin-bottom: 80px;
-    text-align: center;
-    font-size:30px; font-weight:bolder; letter-spacing:1px;
-    text-transform: uppercase;
-
-    display: grid;
-    grid-template-columns: 1fr max-content 1fr;
-    grid-template-rows: 27px 0;
-    grid-gap: 20px;
-    align-items: center;
+@media (max-width:1150px) and (min-width:560px){
+    .courses a{
+        flex-basis: 35%;
+        
+    }
+    .courses a:nth-of-type(3),.courses a:nth-of-type(4){
+        margin-top: 100px;
+    }
+    .courses a .course-name{
+        height: 80px;
+    }
 }
-.Advertisement:after,.Advertisement:before {
-    content: " ";
-    display: block;
-    border-bottom: 1px solid #c50000;
-    border-top: 1px solid #c50000;
-    height: 5px;
-  background-color:#f8f8f8;
+@media (max-width:559px){
+    .courses a:not(:first-of-type){
+        margin-top:110px;
+    }
 }
 
-
-.image{
-    width: 400px !important;
-    height: 400px !important;
-    margin:0 auto;
-
-}
 
 
 
@@ -766,6 +754,7 @@ nav{
 .thepartners{
     background-color: #011c3a;
     padding: 50px;
+    margin-top: -1px;
 }
 
 
